<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_ShellFlags" Id="{9fb36dcc-0754-4fc7-ae02-b692b2199a2e}">
    <Declaration><![CDATA[TYPE ST_ShellFlags :
STRUCT
	bMachineCtrlAssignamentsDone	: BOOL := FALSE;	(*  *)
	bVisuCtrlAssignamentsDone		: BOOL := FALSE;	(*  *)
	bAlarmCtrlAssignamentsDone		: BOOL := FALSE;	(*  *)
	bRecipesCtrlAssignamentsDone	: BOOL := FALSE;	(*  *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>